crates/wac-parser/tests/resolution/fail/duplicate-world-import.wac
package test:comp;

world w {
    import x: func();
    import x: func();
}